# finna-crawler

./: CITATION.cff  LICENSE  README.md  pyproject.toml
src/: finna_crawler.py
