[tool.poetry]
name = "finna-crawler"
version = "0.1.0"
description = "Crawler to download data from the Finna OAI-PMH API"
authors = ["Eetu Mäkelä <eetu.makela@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.10"
Sickle = "^0.7.0"
tqdm = "^4.64.1"
hereutil = "^0.1.1"
click = "^8.1.3"
xopen = {extras = ["zstd"], version = "^1.7.0"}

[tool.poetry.scripts]
finna-crawler = "finna_crawler:crawl_finna"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
